# trade_machine

./: .gitignore  README.md  pyproject.toml
trade_machine/: __main__.py  database_connector.py  environment_loader.py  http_service.py
trade_machine/alpaca_api_client/: README.md  api_code_maps.py  market_data_client.py  market_news_client.py
trade_machine/database_models/: DbTrader.py
