[tool.poetry]
name = "trade-machine"
version = "0.1.0"
description = ""
authors = ["Marcus Jefferson <marcjeffs6@gmail.com>"]
readme = "README.md"
packages = [{include = "trade_machine"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
