[tool.poetry]
name = "trade-machine"
version = "0.1.0"
description = ""
authors = ["Marcus Jefferson <marcjeffs6@gmail.com>"]
readme = "README.md"
packages = [{include = "trade_machine"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
